tests/ui/duplicate-transparent.stderr
error: duplicate #[error(transparent)] attribute
 --> $DIR/tests/ui/duplicate-transparent.rs:5:1
  |
5 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^
